# perdice_ready

./: conver.cpp
coreutils/: cut  od  ptx
initial-input/: Readme.txt  fmt.txt  hufc.txt  lexical.txt  ptx.txt  settings.cfg  testjsmn.json
scz_compress/: test.xml  test.xml.scz
test/WordCounter-master/: README.md  hashmap.c  hashmap.h  main.c  malloc.h  wordcounter
test/cJSON/: cJSON.c  test.json  test1.json
test/cJSON/tests/: test.c
test/codelines-master/: Makefile
test/coreutils-5.0/src/: chmod.c
test/hufc-0.2.2/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac
test/hufc-0.2.2/src/: Makefile.am  Makefile.in  argshand.c  argshand.h  bitsop.c  bitsop.h  ccitt.c  ccitt.h  checksum.c  checksum.h  gettime.c  gettime.h  header.c  header.h  hufc.c  huffman.c  huffman.h  tablacod.c  tablacod.h  tipos.h
test/hufc-0.2.2/util/: Makefile  bench.c  genccitt.c  run.sh  test.c
test/jsmn-master/example/: test.c
test/mxml-2.8/: mxml.xmlfd
test/mxml-2.8/doc/: mxml.man
test/mxml-2.8/vcnet/: UpgradeLog.XML  UpgradeLog.htm  mxml1.vcxproj  mxmldoc.vcxproj  testmxml.vcxproj  testmxml.vcxproj.filters
test/pl0-compiler-master/module1/: README1.txt  vm.c
test/pl0-compiler-master/module1/io/: mcode.txt  stacktrace.txt
test/pl0-compiler-master/module1/sample_output/: stacktrace.txt
test/pl0-compiler-master/module2/: README2.txt  lexicalAnalyzer.c
test/pl0-compiler-master/module2/files/: cleaninput.txt  input.txt  lexemetable.txt  testing.txt
test/pl0-compiler-master/module3/: README3.txt  parser.c
(+3 files in other folders)
